--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,15 @@
 version: 2.1
 
 orbs:
-  rust: circleci/rust@1.6.0
+  rust: phoenix-rs/rust@0.1.0
 
 workflows:
   ci:
     jobs:
       - rust/lint-test-build:
-          version: "1.65"
-# VS Code Extension Version: 1.0.2
+          matrix:
+            parameters:
+              target:
+                - linux-amd64
+                - linux-arm64
+          rust_version: "1.65"
